Amélioration du watch

--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   },
   "scripts": {
     "start": "http-server build",
-    "start-n-watch": "concurrently --names \"start,watch\" \"npm run watch\" \"sleep 5 && npm start\"",
+    "start-n-watch": "concurrently --prefix \"[{name}]\" --names \"server,watch\" \"npm run watch\" \"sleep 5 && npm start\"",
     "prewatch": "npm run build",
-    "watch": "watchify src/solaris.js -t [ babelify --presets [ react ] ] --debug -o build/js/solaris-bundle.js",
+    "watch": "watchify --verbose src/solaris.js -t [ babelify --presets [ react ] ] --debug -o build/js/solaris-bundle.js",
     "prebuild": "shx rm -Rf build/ && shx mkdir -p build/js",
     "build": "cp -R static/* build && browserify src/solaris.js -t [ babelify --presets [ react ] ] -o build/js/solaris-bundle.js"
   },
