--- a/package.json
+++ b/package.json
@@ -4,25 +4,23 @@
   "description": "",
   "main": "build/js/solaris-bundle.js",
   "dependencies": {
+    "babel": "^6.5.2",
+    "babel-preset-env": "^1.3.3",
     "babel-preset-react": "^6.23.0",
+    "babelify": "^7.3.0",
     "browserify": "^14.1.0",
+    "chance": "^1.0.6",
     "concurrently": "^3.4.0",
     "shx": "^0.2.2"
   },
-  "devDependencies": {
-    "babel": "^6.5.2",
-    "babel-preset-react": "^6.23.0",
-    "babelify": "^7.3.0",
-    "chance": "^1.0.4",
-    "tween.js": "^16.3.5"
-  },
+  "devDependencies": {},
   "scripts": {
     "start": "http-server build",
     "start-n-watch": "concurrently --prefix \"[{name}]\" --names \"server,watch\" \"npm run watch\" \"sleep 5 && npm start\"",
     "prewatch": "npm run build",
-    "watch": "watchify src/solaris.js --verbose -t [ babelify --presets [ react ] ] --debug -o build/js/solaris-bundle.js",
+    "watch": "watchify src/solaris.js --verbose -t [ babelify --presets [ env react ] ] --debug -o build/js/solaris-bundle.js",
     "prebuild": "shx rm -Rf build/ && shx mkdir -p build/js",
-    "build": "cp -R static/* build && browserify src/solaris.js -t [ babelify --presets [ react ] ] -o build/js/solaris-bundle.js"
+    "build": "cp -R static/* build && browserify src/solaris.js -t [ babelify --presets [ env react ] ] -o build/js/solaris-bundle.js"
   },
   "author": "",
   "license": "ISC"
