--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "devDependencies": {},
   "scripts": {
     "start": "http-server build",
-    "start-n-watch": "concurrently --prefix \"[{name}]\" --names \"server,watch\" \"npm run watch\" \"sleep 5 && npm start\"",
+    "start-n-watch": "concurrently --prefix \"[{name}]\" --names \"watch,server\" \"npm run watch\" \"sleep 5 && npm start\"",
     "prewatch": "npm run build",
     "watch": "watchify src/solaris.js --verbose -t [ babelify --presets [ env react ] ] --debug -o build/js/solaris-bundle.js",
     "prebuild": "shx rm -Rf build/ && shx mkdir -p build/js",
