--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chance": "^1.0.6",
     "concurrently": "^3.4.0",
     "react": "^15.5.4",
+    "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0",
     "shx": "^0.2.2"
