Suite de la migration sur TypeScript

--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "description": "",
   "main": "build/js/solaria-bundle.js",
   "dependencies": {
+    "@types/dat-gui": "^0.6.2",
     "@types/node": "^7.0.13",
+    "@types/three": "^0.84.6",
     "@types/uuid": "^2.0.29",
     "awesome-typescript-loader": "^3.1.2",
     "chance": "^1.0.6",
     "concurrently": "^3.4.0",
+    "dat-gui": "^0.5.0",
     "node-sass": "^4.5.2",
     "shx": "^0.2.2",
     "source-map-loader": "^0.2.1",
+    "three": "^0.85.1",
     "typescript": "^2.2.2",
-    "uuid": "^3.0.1",
     "webpack": "^2.4.1"
   },
   "scripts": {
@@ -21,7 +24,7 @@
     "prewatch-js": "npm run build-js",
     "watch-js": "webpack --watch --progress",
     "prebuild-js": "shx mkdir -p ./public/build",
-    "build-js": "webpack",
+    "build-js": "webpack --display-error-details",
     "prebuild-css": "shx mkdir -p ./public/build",
     "build-css": "node-sass --source-map true ./src/scss/solaria.scss --output ./public/build",
     "prewatch-css": "npm run build-css",
