--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "build/js/solaria-bundle.js",
   "dependencies": {
+    "@types/chance": "^0.7.32",
     "@types/dat-gui": "^0.6.2",
     "@types/node": "^7.0.13",
     "@types/three": "^0.84.6",
